--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -14,8 +14,8 @@
 .mobile-header {
   min-block-size: var(--mobile-header-height);
 }
-.header-backgroud{
- background: linear-gradient(
+.header-backgroud {
+  background: linear-gradient(
     rgba(0, 0, 0, 0.8) 0%,
     rgba(0, 0, 0, 0.8) 8.1%,
     rgba(0, 0, 0, 0.8) 15.5%,
@@ -51,9 +51,7 @@
       0,
       var(
         --pds-internal-grid-outer-column,
-        calc(
-          var(--grid-column-header) - clamp(16px, 1.25vw + 12px, 36px)
-        )
+        calc(var(--grid-column-header) - clamp(16px, 1.25vw + 12px, 36px))
       )
     )
     [wide-start extended-start basic-start narrow-start] repeat(
@@ -64,9 +62,7 @@
       0,
       var(
         --pds-internal-grid-outer-column,
-        calc(
-          var(--grid-column-header) - clamp(16px, 1.25vw + 12px, 36px)
-        )
+        calc(var(--grid-column-header) - clamp(16px, 1.25vw + 12px, 36px))
       )
     )
     [full-end];
@@ -108,7 +104,7 @@
   display: flex;
   color: #fbfcff;
   text-decoration: none;
-  font: normal normal 400 1rem / calc(6px + 2.125ex) 'reg';
+  font: normal normal 400 1rem / calc(6px + 2.125ex) "reg";
   overflow-wrap: break-word;
   hyphens: auto;
   gap: 4px;
@@ -187,66 +183,92 @@
   max-height: 100%;
 }
 .profile-icon-container {
-      grid-area: right;
-    justify-self: end;
-    cursor: pointer;
-    display: flex;
-    filter: none;
-    flex-direction: row;
-    align-items: center;
-    z-index: 300;
-    position: relative;
+  grid-area: right;
+  justify-self: end;
+  cursor: pointer;
+  display: flex;
+  filter: none;
+  flex-direction: row;
+  align-items: center;
+  z-index: 300;
+  position: relative;
 }
- .svg {
-    display: block;
-    max-width: 100%;
-    max-height: 100%;
-    height: inherit;
-    width: 600px;
+.svg {
+  display: block;
+  max-width: 100%;
+  max-height: 100%;
+  height: inherit;
+  width: 600px;
 }
 
-@media (min-width:768px) {
-   .porsche-logo-container{
-      max-width: unset !important;
-  max-height: unset !important;
-   }
-    .header-dark-theme .nav-container{
-        grid-template-columns: [full-start] minmax(0, var(--pds-internal-grid-outer-column, calc(var(--pds-internal-grid-safe-zone) - clamp(16px, 1.25vw + 12px, 36px)))) [wide-start] minmax(0, 1fr) [extended-start] minmax(0, 1fr) [basic-start] repeat(2, minmax(0, 1fr)) [narrow-start] repeat(8, minmax(0, 1fr)) [narrow-end] repeat(2, minmax(0, 1fr)) [basic-end] minmax(0, 1fr) [extended-end] minmax(0, 1fr) [wide-end] minmax(0, var(--pds-internal-grid-outer-column, calc(var(--pds-internal-grid-safe-zone) - clamp(16px, 1.25vw + 12px, 36px)))) [full-end];
-        --pds-internal-grid-safe-zone: calc(5vw - 16px);
-        --pds-grid-basic-span-one-half: span 6;
-        --pds-grid-basic-span-one-third: span 4;
-        --pds-grid-narrow-span-one-half: span 4;
-        --pds-grid-basic-span-two-thirds: span 8;
-        --pds-grid-extended-span-one-half: span 7;
-    }
-    .nav-contents-wrapper{
-        margin-top: 6px;
-    }
-    .menu-icon .menu-button{
-        margin-block: 0.5rem;
-        margin-inline: 0.5rem;
-    }
-    #root .category-main-container{
-        z-index: 302;
+@media (min-width: 768px) {
+  .porsche-logo-container {
+    max-width: unset !important;
+    max-height: unset !important;
+    z-index: 100;
+    cursor: pointer;
+  }
+  .header-dark-theme .nav-container {
+    grid-template-columns: [full-start] minmax(
+        0,
+        var(
+          --pds-internal-grid-outer-column,
+          calc(
+            var(--pds-internal-grid-safe-zone) -
+              clamp(16px, 1.25vw + 12px, 36px)
+          )
+        )
+      ) [wide-start] minmax(0, 1fr) [extended-start] minmax(0, 1fr) [basic-start] repeat(
+        2,
+        minmax(0, 1fr)
+      ) [narrow-start] repeat(8, minmax(0, 1fr)) [narrow-end] repeat(
+        2,
+        minmax(0, 1fr)
+      ) [basic-end] minmax(0, 1fr) [extended-end] minmax(0, 1fr) [wide-end] minmax(
+        0,
+        var(
+          --pds-internal-grid-outer-column,
+          calc(
+            var(--pds-internal-grid-safe-zone) -
+              clamp(16px, 1.25vw + 12px, 36px)
+          )
+        )
+      ) [full-end];
+    --pds-internal-grid-safe-zone: calc(5vw - 16px);
+    --pds-grid-basic-span-one-half: span 6;
+    --pds-grid-basic-span-one-third: span 4;
+    --pds-grid-narrow-span-one-half: span 4;
+    --pds-grid-basic-span-two-thirds: span 8;
+    --pds-grid-extended-span-one-half: span 7;
+  }
+  .nav-contents-wrapper {
+    margin-top: 6px;
+  }
+  .menu-icon .menu-button {
+    margin-block: 0.5rem;
+    margin-inline: 0.5rem;
+  }
+  #root .category-main-container {
+    z-index: 302;
     float: inline-start;
     inline-size: 44%;
     padding-inline: 5%;
-    }
-    #root .car-models-wrapper{
-        float: inline-end;
-        background-color: #eeeff2;
-        box-sizing: border-box;
-        position: absolute;
-        inline-size: 40%;
-        left: 44%;
-        z-index: 1;
-        padding-inline: 5%;
-        scrollbar-gutter: stable;
-    }
-    .block-size{
-      block-size: 148px;
-    }
-    .porsche-logo-container svg{
-      width: 70%;
-    }
+  }
+  #root .car-models-wrapper {
+    float: inline-end;
+    background-color: #eeeff2;
+    box-sizing: border-box;
+    position: absolute;
+    inline-size: 40%;
+    left: 44%;
+    z-index: 1;
+    padding-inline: 5%;
+    scrollbar-gutter: stable;
+  }
+  .block-size {
+    block-size: 148px;
+  }
+  .porsche-logo-container svg {
+    width: 70%;
+  }
 }
