--- a/src/components/Model Details/ModelDetails.css
+++ b/src/components/Model Details/ModelDetails.css
@@ -415,3 +415,23 @@
 .specs-para{
   font: 400 1rem/calc(6px + 2.125ex) "reg";
 }
+@media (min-width:768px) {
+    .top-speed-section{
+      grid-template-columns: [full-start] minmax(0,var(--pds-internal-grid-outer-column, calc(var(--pds-internal-grid-safe-zone) - clamp(16px, 1.25vw + 12px, 36px)))) [wide-start] minmax(0,1fr) [extended-start] minmax(0,1fr) [basic-start] repeat(2,minmax(0,1fr)) [narrow-start] repeat(8,minmax(0,1fr)) [narrow-end] repeat(2,minmax(0,1fr)) [basic-end] minmax(0,1fr) [extended-end] minmax(0,1fr) [wide-end] minmax(0,var(--pds-internal-grid-outer-column, calc(var(--pds-internal-grid-safe-zone) - clamp(16px, 1.25vw + 12px, 36px)))) [full-end];
+              --pds-internal-grid-safe-zone: calc(5vw - 16px);
+        --pds-grid-basic-span-one-half: span 6;
+        --pds-grid-basic-span-one-third: span 4;
+        --pds-grid-narrow-span-one-half: span 4;
+        --pds-grid-basic-span-two-thirds: span 8;
+        --pds-grid-extended-span-one-half: span 7;
+    }
+    .speed-power-section{
+      grid-column: extended-start/span 6;
+    }
+    .model-car-image-container{
+      grid-column: span 10/full-end;
+    }
+    .specs-header-head{
+      padding: 0 calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 2) !important;
+    }
+}
