--- a/src/components/Model Details/ModelDetails.css
+++ b/src/components/Model Details/ModelDetails.css
@@ -96,8 +96,6 @@
   max-width: 100%;
   max-height: 100%;
   width: auto;
-  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/911.b68f913.svg)
-    no-repeat left top / contain !important;
   aspect-ratio: 94 / 25 !important;
   background: rgb(216 216 219) !important;
   color-scheme: light dark !important;
@@ -111,7 +109,7 @@
 .car-model-images {
   grid-column: basic;
   grid-row: 2/5;
-  z-index: 1;
+  z-index: 0;
 }
 .car-model-images img {
   display: block;
@@ -375,6 +373,10 @@
   grid-row: 4/5;
   align-self: end;
 }
+.spec-video-container{
+  grid-row: 1/-3;
+  grid-column: 1/-1;
+}
 @media (max-width:759px){
   .moving-scrolling-container{
     border-top-right-radius: 0;
@@ -429,6 +431,7 @@
       grid-column: extended-start/span 6;
     }
     .model-car-image-container{
+      transform: translateX(140px);
       grid-column: span 10/full-end;
     }
     .specs-header-head{
