--- a/src/components/styles/page.css
+++ b/src/components/styles/page.css
@@ -20,7 +20,7 @@
   src: url("../../assets/Fonts/porsche-next-latin-semi-bold.b5f6fca.woff2");
 }
 body{
-
+  overflow-x: hidden;
   background-color: rgb(255, 255, 255); /* will change */
   transition: background-color 0.8s ease;
   font-weight: 400;
@@ -57,6 +57,7 @@ h3 {
 html,
 body {
   margin: 0;
+  overflow-x: hidden;
   padding: 0;
   font-family: "semi-bold";
   line-height: calc(6px + 2.125ex);
